--- a/src/greynoise/cli/templates/timelinehourly.txt.j2
+++ b/src/greynoise/cli/templates/timelinehourly.txt.j2
@@ -2,22 +2,23 @@
 {% for ip_context in results -%}
 {% if ip_context.ip %}
 
-          <header>IP Timeline - Hourly Summary</header>
-          ------------------------------
+---------------------
+<header>IP Timeline - Summary</header>
+---------------------
 <key>IP</key>: <value>{{ ip_context.metadata.ip }}</value>
 <key>Start</key>: <value>{{ ip_context.metadata.start_time.replace("T", " ").replace("Z", "") }}</value>
 <key>End</key>: <value>{{ ip_context.metadata.end_time.replace("T", " ").replace("Z", "") }}</value>
 
-          <header>Timeline</header>
-          --------
+<header>Timeline - Event Details</header>
+------------------------
 {%- for item in ip_context.activity %}
 <key>Timestamp</key>: <value>{{ item.timestamp.replace("T", " ").replace("Z", "") }}</value>
 <key>Classification</key>: {{ macros.classification(item.classification) }}
-<key>rDNS</key>: <value>{{ item.rdns }}</value>
+{%- if item.rdns %}<key>rDNS</key>: <value>{{ item.rdns }}</value>{% endif %}
 <key>Organization</key>: <value>{{ item.organization }}</value>
 <key>ASN</key>: <value>{{ item.asn }}</value>
 <key>Ports</key>: {{ macros.ports_list(item.protocols) }}
-<key>Tags</key>: {{ macros.tag_list(item.tags) }}
+{% if item.tags %}<key>Tags</key>: {{ macros.tag_list(item.tags) }}{% endif %}
 {% endfor %}
 
 
