--- a/src/greynoise/cli/templates/gnql_query.txt.j2
+++ b/src/greynoise/cli/templates/gnql_query.txt.j2
@@ -1,22 +1,22 @@
 {% import "macros.txt.j2" as macros %}
 {% for result in results -%}
-{% if result.message == ok %}
-{{ result.message }}
+{% if result.request_metadata.message %}
+{{ result.request_metadata.message }}
 {% else %}
 {% call macros.header(loop) %}Query{% endcall -%}
-Query: {{ result.query }}
-Count of IPs Returned: {{ result.count }}
-Scroll Token: {{ result.scroll }}
-{% if result.count > 10 %}
+Query: {{ result.request_metadata.query }}
+Count of IPs Returned: {{ result.request_metadata.count }}
+Scroll Token: {{ result.request_metadata.scroll }}
+{% if result.request_metadata.count > 10 -%}
 {{ space }}
 This output format is limited to 10 results, for all results use -f json for JSON output.
-Additionally, use the stats command to pull just statistics for this query
-{% endif %}
-{%- if result.data %}
-{%- for ip_context in result.data[:10] %}
-{{ macros.result_header(loop) }}
-{%- include "ip_context_result.txt.j2" %}
-{%- endfor %}
+Additionally, use the stats command to pull just statistics for this query.
+{% endif -%}
+{%- if result.data -%}
+{%- for ip_context in result.data[:10] -%}
+{{- macros.result_header(loop) -}}
+{%- include "ip_context_result.txt.j2" -%}
+{%- endfor -%}
 {% else %}
 No results found for this query.
 {% endif %}
